--- a/src/navbar.css
+++ b/src/navbar.css
@@ -6,7 +6,7 @@
 }
 
 .sidebar {
-  width: 280px; /* Sidebar width */
+  width: 260px; /* Sidebar width */
   height: 100vh;
   background-color: #fff;
   box-shadow: 2px 0 10px rgba(0, 0, 0, 0.1);
@@ -113,7 +113,8 @@
   }
   
   .sidebar {
-    width: 250px; /* Adjusted sidebar width for mobile */
+    width: 250px;
+  height: 5000px;
   }
 }
 
