--- a/src/Login.css
+++ b/src/Login.css
@@ -170,3 +170,40 @@
     background-image: url(./erplogo.png);
     background-size: contain;
 }
+
+/* loding  */
+
+/* Loading Screen Styles */
+/* Fullscreen Loading Styles */
+.loading-screen {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+  }
+  
+  .fullscreen-bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  
+  .welcome-message {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: black;
+    font-size: 3rem;
+    font-weight: bold;
+    text-align: center;
+    text-shadow: 2px 2px 4px rgba(255, 255, 255, 0.7);
+    width: 100%;
+  }
+  
+  
